<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@drawable/background_menu">

    <LinearLayout
        android:id="@+id/ll_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ru.gidline.app.screen.main.view.HeaderLayout
            android:id="@+id/hl_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ru.gidline.app.screen.main.view.MenuLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:text="@string/menu_summary" />

        <ru.gidline.app.screen.main.view.MenuLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:text="@string/menu_subscriptions" />

        <ru.gidline.app.screen.main.view.MenuLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:text="@string/menu_documents" />

        <ru.gidline.app.screen.main.view.MenuLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:text="@string/menu_money" />

        <ru.gidline.app.screen.main.view.MenuLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:text="@string/menu_invite" />

        <ru.gidline.app.screen.main.view.MenuLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:text="@string/menu_questions" />

        <ru.gidline.app.screen.main.view.MenuLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:text="@string/menu_exit" />

    </LinearLayout>

</ScrollView>
