<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textview_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/help_resume"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textview_serv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:textAlignment="center"
            android:text="@string/test"
            android:textColor="@color/colorMigration"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textview_question"
            app:layout_constraintStart_toStartOf="@+id/textview_question"
            app:layout_constraintTop_toBottomOf="@+id/textview_question" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/what"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/textview_serv"
            app:layout_constraintStart_toStartOf="@+id/textview_serv"
            app:layout_constraintTop_toBottomOf="@+id/textview_serv" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/layout_drawable"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <ru.gidline.app.screen.search.vacancies.vacancy.ExpansionLayoutSet
                android:id="@+id/img1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/resume" />

            <ru.gidline.app.screen.search.vacancies.vacancy.ExpansionLayoutSet
                android:id="@+id/img2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/resume_helpws" />

            <ru.gidline.app.screen.search.vacancies.vacancy.ExpansionLayoutSet
                android:id="@+id/img3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/language" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.0">

            <CheckBox
                android:id="@+id/check_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:buttonTint="#993a99"
                android:textSize="12sp"
                android:scaleX="1.5"
                android:scaleY="1.5"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                tools:ignore="UnusedAttribute" />

            <View
                android:id="@+id/view2"
                android:layout_width="1dp"
                android:layout_marginStart="26dp"
                android:layout_marginBottom="10dp"
                android:layout_height="match_parent"
                android:layout_toEndOf="@id/check_price"
                android:background="@color/colorConsulate" />

            <TextView
                android:id="@+id/text_add_serv111"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textSize="12sp"
                android:layout_toEndOf="@+id/view2"
                android:textColor="@color/colorConsulate"
                android:textStyle="bold" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/image_left_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/text_price_serv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColor="@color/design_default_color_background"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            app:layout_constraintStart_toStartOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="@+id/imageButton2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleX="0.5"
            android:scaleY="0.3"
            android:layout_marginEnd="10dp"
            android:drawableStart="@drawable/arrow_right"
            android:drawableTint="@color/colorGrayBackground"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
            app:layout_constraintEnd_toEndOf="@+id/imageButton2"
            app:layout_constraintTop_toTopOf="@+id/imageButton2"
            app:layout_constraintVertical_bias="0.62"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/order"
            android:textColor="@color/design_default_color_background"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.45" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
